cmake_minimum_required(VERSION 3.15)
project(10901_pre_mid C)

set(CMAKE_C_STANDARD 11)

add_executable(test main.c)

add_executable(0-nm_table 0-nm_table.c)
add_executable(1-sorting 1-sorting.c)
add_executable(2-successione_di_fibonacci 2-successione_di_fibonacci.c)
add_executable(3-caesar_cipher 3-caesar_cipher.c)
add_executable(4-judge_terms_statistics 4-judge_terms_statistics.c)
add_executable(4-judge_terms_statistics-2 4-judge_terms_statistics-2.c)
add_executable(5-max_min_avg 5-max_min_avg.c)
add_executable(6-hourglass 6-hourglass.c)
add_executable(7-char_statistics 7-char_statistics.c)
add_executable(8-pythagorean 8-pythagorean.c)
